myteo/test/analyze/type_check/tuple/non_int_literal_index.exp
Error: Tuple indices must be int literals
test/analyze/type_check/tuple/non_int_literal_index.myte:5:4-8
 5 |   x[true];
   |     ^^^^

Error: Tuple indices must be int literals
test/analyze/type_check/tuple/non_int_literal_index.myte:6:4-6
 6 |   x[()];
   |     ^^

Error: Tuple indices must be int literals
test/analyze/type_check/tuple/non_int_literal_index.myte:7:4-9
 7 |   x[1 + 2];
   |     ^^^^^

Error: Tuple indices must be int literals
test/analyze/type_check/tuple/non_int_literal_index.myte:8:4-7
 8 |   x["a"];
   |     ^^^