myteo/test/analyze/type_check/tuple/non_int_literal_index.myte
module test

fun main() {
  val x: (int, string) = (1, "str");
  x[true];
  x[()];
  x[1 + 2];
  x["a"];
}